unpackaged/main/default/objects/RICSC_Email__c/RICSC_Email__c.object-meta.xml
<CustomObject>
    <description>This object is used to collect  the Emails of the related Local records.</description>
    <label>Email</label>
    <nameField>
        <displayFormat>E-{000000000}</displayFormat>
        <label>Email</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emails</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>RICSC_VCASharingGolden__c</fullName>
        <label>VCA Sharing Golden</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>RICSC_VCASharingLocal__c</fullName>
        <label>VCA Sharing Local</label>
    </sharingReasons>
</CustomObject>