unpackaged/main/default/objects/RICSC_Email__c/fields/RICSC_Account__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Account (contact)</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>RICSC_EmailsAccount</relationshipName>
        <type>Lookup</type>
    </CustomField>