unpackaged/main/default/objects/RICSC_Email__c/fields/RICSC_DefaultEmail__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DefaultEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to identify which is the primary email. For the LR comes from the Source System in the GR is populated  based on rules</description>
        <label>Default Email</label>
        <type>Checkbox</type>
    </CustomField>