unpackaged/main/default/objects/RICSC_Email__c/fields/RICSC_DefaultGREmail__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DefaultGREmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default GR Email</label>
        <type>Checkbox</type>
    </CustomField>