unpackaged/main/default/objects/RICSC_Email__c/fields/RICSC_DoNotUse__c.field-meta.xml
<CustomField>
        <fullName>RICSC_DoNotUse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to capture whether or not this email can be used</description>
        <label>Do Not Use</label>
        <type>Checkbox</type>
    </CustomField>