unpackaged/main/default/objects/RICSC_Email__c/fields/RICSC_Email__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Email__c</fullName>
        <description>Standard email type field</description>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>