unpackaged/main/default/objects/RICSC_Email__c/fields/RICSC_EmailType__c.field-meta.xml
<CustomField>
        <fullName>RICSC_EmailType__c</fullName>
        <description>Picklist to capture the email type</description>
        <label>Email Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Email Mr</fullName>
                </value>
                <value>
                    <fullName>Email Mrs</fullName>
                </value>
                <value>
                    <fullName>Email Partner</fullName>
                </value>
                <value>
                    <fullName>Email web</fullName>
                </value>
                <value>
                    <fullName>Invalid Email</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>