unpackaged/main/default/objects/RICSC_Email__c/fields/RICSC_EndDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </CustomField>