unpackaged/main/default/objects/RICSC_Email__c/fields/RICSC_ExternalID__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Text field to capture the SAP ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>