unpackaged/main/default/objects/RICSC_Email__c/fields/RICSC_GR__c.field-meta.xml
<CustomField>
        <fullName>RICSC_GR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field links the email to the golden record</description>
        <label>GR</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>RICSC_EmailsGR</relationshipName>
        <type>Lookup</type>
    </CustomField>